measure overlap between datasets

--- a/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
+++ b/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -34,7 +34,7 @@
      }
     },
     "colab_type": "code",
-    "collapsed": true,
+    "collapsed": false,
     "id": "apJbCsBHl-2A"
    },
    "outputs": [],
@@ -53,6 +53,9 @@
     "from sklearn.linear_model import LogisticRegression\n",
     "from six.moves.urllib.request import urlretrieve\n",
     "from six.moves import cPickle as pickle\n",
+    "# for the comparison of images\n",
+    "from PIL import Image\n",
+    "import imagehash\n",
     "\n",
     "# Config the matplotlib backend as plotting inline in IPython\n",
     "%matplotlib inline"
@@ -680,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 140,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -716,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 141,
    "metadata": {
     "cellView": "both",
     "colab": {
@@ -756,13 +759,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Compressed pickle size: 718193801\n"
+      "Compressed pickle size: 690800506\n"
      ]
     }
    ],
    "source": [
     "statinfo = os.stat(pickle_file)\n",
     "print('Compressed pickle size:', statinfo.st_size)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "from numpy import array,matrix,float32\n",
+    "\n",
+    "data = pickle.load( open( \"notMNIST.pickle\", \"rb\" ))\n",
+    "# note something like\n",
+    "#for k in temp:\n",
+    "#    exec('{KEY} = {VALUE}'.format(KEY = k, VALUE = repr(temp[k])))\n",
+    "# results in ValueError: setting an array element with a sequence\n",
+    "train_dataset = data['train_dataset']\n",
+    "train_labels = data['train_labels']\n",
+    "valid_dataset = data['valid_dataset']\n",
+    "valid_labels = data['valid_labels']\n",
+    "test_dataset = data['test_dataset']\n",
+    "test_labels = data['test_labels']\n"
    ]
   },
   {
@@ -783,6 +809,60 @@
     "- What about near duplicates between datasets? (images that are almost identical)\n",
     "- Create a sanitized validation and test set, and compare your accuracy on those in subsequent assignments.\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "Discussion on Solution Below\n",
+    "---------\n",
+    "see https://discussions.udacity.com/t/assignment-1-problem-5/45657/94\n",
+    "\n",
+    "see https://realpython.com/blog/python/fingerprinting-images-for-near-duplicate-detection/ \n",
+    "for discussion on dhash and its origin"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "valid -> train overlap: 1312 samples\n",
+      "test  -> train overlap: 1526 samples\n",
+      "test  -> valid overlap: 294 samples\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_hash = [str(imagehash.dhash(Image.fromarray(np.uint8(x*255)))) for x in valid_dataset]\n",
+    "train_hash = [str(imagehash.dhash(Image.fromarray(np.uint8(x*255)))) for x in train_dataset]\n",
+    "test_hash = [str(imagehash.dhash(Image.fromarray(np.uint8(x*255)))) for x in test_dataset]\n",
+    "\n",
+    "\n",
+    "valid_in_train = np.in1d(valid_hash, train_hash)\n",
+    "test_in_train  = np.in1d(test_hash,  train_hash)\n",
+    "test_in_valid  = np.in1d(test_hash,  valid_hash)\n",
+    "\n",
+    "valid_keep = ~valid_in_train\n",
+    "test_keep  = ~(test_in_train | test_in_valid)\n",
+    "\n",
+    "valid_dataset_clean = valid_dataset[valid_keep]\n",
+    "valid_labels_clean  = valid_labels [valid_keep]\n",
+    "\n",
+    "test_dataset_clean = test_dataset[test_keep]\n",
+    "test_labels_clean  = test_labels [test_keep]\n",
+    "\n",
+    "print(\"valid -> train overlap: %d samples\" % valid_in_train.sum())\n",
+    "print(\"test  -> train overlap: %d samples\" % test_in_train.sum())\n",
+    "print(\"test  -> valid overlap: %d samples\" % test_in_valid.sum())"
    ]
   },
   {
