added note about hamming distance

--- a/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
+++ b/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
@@ -850,7 +850,8 @@
     "valid_in_train = np.in1d(valid_hash, train_hash)\n",
     "test_in_train  = np.in1d(test_hash,  train_hash)\n",
     "test_in_valid  = np.in1d(test_hash,  valid_hash)\n",
-    "\n",
+    "# ~ is ones complement\n",
+    "# e.g. a = 0011 1100; ~a  = 1100 0011\n",
     "valid_keep = ~valid_in_train\n",
     "test_keep  = ~(test_in_train | test_in_valid)\n",
     "\n",
