Logistic Regression used to train the dataset

--- a/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
+++ b/Lesson_2_Assignment_notMNIST/1_notmnist.ipynb
@@ -821,7 +821,9 @@
     "see https://discussions.udacity.com/t/assignment-1-problem-5/45657/94\n",
     "\n",
     "see https://realpython.com/blog/python/fingerprinting-images-for-near-duplicate-detection/ \n",
-    "for discussion on dhash and its origin"
+    "for discussion on dhash and its origin\n",
+    "\n",
+    "Note: The np.in1d() will only give you exact matches of the hash. You may want to try hamming distance to give a score instead."
    ]
   },
   {
@@ -884,6 +886,166 @@
     "Optional question: train an off-the-shelf model on all the data!\n",
     "\n",
     "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**This is based on discussions in https://discussions.udacity.com/t/assignment-1-problem-6-instructions-on-how-to-train-model/47556/19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.3s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 50  examples, accuracy is :  0.5887\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.2s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 100  examples, accuracy is :  0.7426\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    0.7s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 1000  examples, accuracy is :  0.8392\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    3.9s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 5000  examples, accuracy is :  0.8384\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   13.1s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 10000  examples, accuracy is :  0.8596\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   36.6s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 20000  examples, accuracy is :  0.8707\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:   59.6s finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 30000  examples, accuracy is :  0.8769\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:  4.2min finished\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "For 100000  examples, accuracy is :  0.8944\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score\n",
+    "for train_examples_count in [50,100,1000,5000,10000,20000,30000,100000]:\n",
+    "    #Train\n",
+    "    clf=LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=42, verbose=1, max_iter=1000 )\n",
+    "    small_train_data = train_dataset[:train_examples_count]\n",
+    "    small_train_lbl = train_labels[:train_examples_count]\n",
+    "    #Each Letter is a 28*28 pixel image. Convert 28*28 matrix to a 1*784 array. Do this for all images\n",
+    "    X_train = small_train_data.reshape(len(small_train_data),len(small_train_data[0])*len(small_train_data[0]))\n",
+    "    clf.fit(X_train,small_train_lbl)\n",
+    "    #Test\n",
+    "    X_test = test_dataset.reshape(len(test_dataset),len(test_dataset[0])*len(test_dataset[0]))\n",
+    "    pred_lst = [(clf.predict(row.reshape(1,-1)))[0] for row in X_test]    \n",
+    "    #Evaluate\n",
+    "    print ('For', train_examples_count,' examples, accuracy is : ',accuracy_score(test_labels,pred_lst))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Observation\n",
+    "\n",
+    "What is nice about above is that it is O(N). Using WolframAlpha to \n",
+    "```\n",
+    "fit  (10000,13.1) (20000,36.6) (30000,59.6)\n",
+    "```\n",
+    "Results in the equation: 0.002325 x - 10.0667 (linear)\n",
+    "Plugging 100000 N into this equations yields a prediction of 3.86 minutes.\n",
+    "The actual calculation is slightly slower at 4.2 min\n",
+    "\n"
    ]
   }
  ],
