reorganized dir structure

--- a/Assignments/1_notmnist.ipynb
+++ b/Assignments/1_notmnist.ipynb
@@ -892,7 +892,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**This is based on discussions in https://discussions.udacity.com/t/assignment-1-problem-6-instructions-on-how-to-train-model/47556/19"
+    "**This is based on discussions in** https://discussions.udacity.com/t/assignment-1-problem-6-instructions-on-how-to-train-model/47556/19"
    ]
   },
   {
